testdata/cases/analyze/invalid_listen_address.go
package analyze_cases

import "net/http"

func invalidListenAddress(handler http.Handler) error {
	return http.ListenAndServe("localhost", handler)
}
